Bug: Button not centered FixAtt1

--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,8 @@ h3{
 
 #emojibutton{
 	text-align: center;
+	display: flex;
+	justify-content: center;
 }
 
 p {
